istio-system-dr.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: originate-mtls-for-nginx-user1
  namespace: istio-system
spec:
  host: my-nginx.user1-mesh-external.svc.cluster.local
  workloadSelector:
    matchLabels:
      app: istio-egressgateway
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
    portLevelSettings:
    - port:
        number: 443
      tls:
        credentialName: user1-mesh-external-egress-nginx-client-certs
        mode: MUTUAL
        sni: my-nginx.user1-mesh-external.svc.cluster.local
